CSS bugfix: Avoid extra margin above batch list groups in Chrome

--- a/app/assets/stylesheets/responsive/alaveteli_pro/_batch_request_authority_search_layout.scss
+++ b/app/assets/stylesheets/responsive/alaveteli_pro/_batch_request_authority_search_layout.scss
@@ -134,6 +134,8 @@
 }
 
 .batch-builder__list__group {
+    display: block; // avoids a Chrome bug where display:list-item introduced extra margin-top
+
     ul {
         padding-left: 0; // reset default list padding
 
